 (Format: Year/Month/Day)
Changes for 1.1:
*07/03/24:
   * Updated French translations (thanks Ulrich Etile)
     nls/fr_FR/Translation.m
   * Fixed a little bug in fbsetbg (Mark)
     util/fbsetbg
   * Added new key command GoToWindow (Mark)
     - Syntax is GoToWindow <int> [<bitmask>], where the int gives the position
       of the desired window with respect to a list of windows, and the bitmask
       is the same as for NextWindow. A negative number for <int> will count
       back from the end of the list.
     - Particularly useful examples are GoToWindow <int> 9 and
       GoToWindow <int> 25, which will focus the window at position <int> in the
       iconbar modes Workspace and WorkspaceNoIcons, respectively.
   * Fixed creation order window cycling with tabbed windows (Mark)
   * Workspace Menu wasn't updating when windows changed titles (Mark)
   * Some other minor changes/code cleanup (Mark)
*07/03/21:
   * HideMenus didn't work on CustomMenus, and also fixed a memleak with
     CustomMenu (Mark + thanks Julien Trolet)
     FbCommands.cc/hh
   * Added new command TypeAheadFocus (Mark)
     - syntax is the same as for NextWindow; when you run the command, you can
       start typing the title of the window, and it will gain focus; pressing
       tab will cycle through all matching entries using the options specified;
       when you've found the window you want, just press return or escape
     WinClient.hh Screen.cc/hh FbCommandFactory.cc WorkspaceCmd.cc/hh
--------------------------------
Changes for 1.0rc3
*07/03/20:
   * Updated doc/asciidoc/fluxbox.txt (Mathias)
*07/03/19:
   * Active menu item wasn't getting reset properly when menu closed (Mark)
     FbTk/Menu.cc
   * Fixed some problems with toolbar sizing (Mark + thanks Julien Trolet)
     Toolbar.cc
*07/03/18:
   * Changed position remembering so it only remembers position relative to the
     current head (Mark)
     Remember.cc